--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
       </div>
 
       <div class="card card-bio">
-        <p> I'm an environmental biologist, passionate about web-development.
-          I aim to use my coding skills to reach creative solutions and help people.
+        <h3>About me</h3>
+        <p> I'm a Full Stack Web Developer and an Environmental Biologist.
+          I'm passionate about coding and I aim to use my skills to reach creative solutions to help people.
         </p>
       </div>
 
